WIP nyanz EPGStation changes
