# api.yml
@@ -89,6 +89,26 @@ components:
             type: string
             enum:
                 - GR
+                - GR-ALT1
+                - GR-ALT2
+                - GR-ALT3
+                - GR-ALT4
+                - GR-ALT5
+                - GR-ALT6
+                - GR-ALT7
+                - GR-ALT8
+                - GR-ALT9
+                - GR-ALT10
+                - GR-ALT11
+                - GR-ALT12
+                - GR-ALT13
+                - GR-ALT14
+                - GR-ALT15
+                - GR-ALT16
+                - GR-ALT17
+                - GR-ALT18
+                - GR-ALT19
+                - GR-ALT20
                 - BS
                 - CS
                 - SKY
@@ -192,6 +212,8 @@ components:
                 broadcast:
                     description: 有効な放送波情報
                     type: object
+                    additionalProperties:
+                        type: boolean
                     required:
                         - GR
                         - BS
@@ -608,6 +630,11 @@ components:
                 SKY:
                     description: SKY
                     type: boolean
+                channelTypes:
+                    description: GR-ALT などの追加 channel type
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ChannelType'
                 channelIds:
                     description: 放送局
                     type: array
@@ -1722,6 +1749,16 @@ components:
             required: true
             schema:
                 type: boolean
+
+        ChannelTypes:
+            description: 追加の channel type
+            in: query
+            name: channelTypes
+            required: false
+            schema:
+                type: array
+                items:
+                    $ref: '#/components/schemas/ChannelType'
 
         GetReserveType:
             description: 予約情報取得タイプ
